    --members (-M).
  * Added support for usernames with arbitrary length.
  * audit logging improvements.
  * error handling improvement (see above).
  * Log permission denied to syslog and audit.
- groupadd
  * audit logging improvements.
  * error handling improvement (see above).
  * Speedup (see "addition of users or groups" above).
- groupdel
  * audit logging improvements.
  * error handling improvement (see above).
- groupmems
  * Check if user exist before they are added to groups.
  * Avoid segfault in case the specified group does not exist in /etc/group.
  * Everybody is allowed to list the users of a group.
  * /etc/group is open readonly when one just wants to list the users of a
    group.
  * Added syslog support.
  * Use the groupmems PAM service name instead of groupmod.
  * Fix segmentation faults when adding or removing users from a group.
  * Added support for shadow groups.
  * Added support long options --add (-a), --delete (-d), --purge (-p),
    --list (-l), --group (-g).
- groupmod
  * audit logging improvements.
  * error handling improvement (see above).
- newusers
  * Implement the -r, --system option.
  * Speedup (see "addition of users or groups" above).
- passwd
  * For compatibility with other passwd version, the --lock an --unlock
    options do not lock or unlock the user account anymore.  They only
    lock or unlock the user's password.
- su
  * 
- useradd
  * audit logging improvements.
  * Speedup (see "addition of users or groups" above).
  * See CREATE_HOME above.
  * New -M/--no-create-home option to disable CREATE_HOME.
- userdel
  * audit logging improvements.
- usermod
  * Allow adding LDAP users (or any user not present in the local passwd
    file) to local groups

shadow-4.1.2.1 -> shadow-4.1.2.2					23-11-2008

*** security
- Fix a race condition in login that could lead to gaining ownership or
  changing mode of arbitrary files.
- Fix a possible login DOS, which could be caused by injecting forged
  entries in utmp.